# neatzsche

./: .gitignore  README.md  installgnugo.sh
branches/cpp-0.5/: run-go.sh
branches/cpp-0.6/: run-test.sh
cmake_modules/: FindGNUGO.cmake  FindNEATZSCHE.cmake  FindOptFlags.cmake
cpp/: CMakeLists.txt  Makefile  TODO  local-run-go.sh  machinefile  plot.sh  run-eye.sh  run-go.sh  run-localeye.sh  run-neatzsche.sh
cpp/data/: bestls2d  bestls2d-artig  bestls2d-closer-than-ever  bestls2d-first-working-one  bestls2d-got-slit  bestls2d-got-slit-better  bestls2d-my-first-circle  bestls2d-optimal-with-this-fitness-func  bestls2d-yet-another-circle  cross.tif  cross.tiff  lightsim-eyetest.txt  lightsim-testworld-old.txt  lightsim-testworld.txt  or.data  polygon.tif  polygon2.tif  result.tif  sierpTr.tif  sierpinski3.tif  sierpinsky2.tiff  test.tiff  testcore2.tif  threelines.tiff  triangle.tif  triangle2.tif  xor.data
cpp/include/: ann.h  boye.h  coevolution.h  evaluator.h  evolution.h  evoops.h  gene.h  genome.h  iface.h  neatmpi.h  neuralmath.h  runner.h
cpp/settings/: settings-clustereye  settings-evomodel  settings-eye  settings-gnugo  settings-go  settings-go-best  settings-model  settings-modelevo  settings-xor-nostruct  settings-xor-struct-rec
cpp/src/: Makefile  ann.cpp  ann.h  boye.cpp  coevolution.h  dummyslave.cpp  dummyslave2.cpp  evaluator.cpp  evaluator.h  evolution.cpp  evolution.h  evoops.cpp  gene.cpp  gene.h  genetics.cpp  genetics.h  genome.cpp  genome.h  gowrapper.cpp  gowrapper.h  iface.h  moc_paintwindow.cpp  mpi.cpp  mpi.h  mpitest.cpp  neatmaster.cpp  neatmpi.cpp  neatmpi.h  neatslave.cpp  neatzsche.cpp  neuralmath.cpp  neuralmath.h  paintwindow.cpp  puregotest.cpp  runner.cpp  runner.h  settings.cpp  statechanges.cpp  statechanges.h  test-draw.cpp  (+9 more)
cpp/src/lightsim/: cell.h  lightsim-test.cpp  lightsim-viewer.cpp  lightsim-viewer.h  lightsim.cpp  lightsim.h  lightsource.h  lightvector.h  lsc.h  nworld.cpp  nworld.h  paintwindow.cpp  paintwindow.h
cpp/templates/: distconfig-eye.txt.template  distconfig-go.txt.template  neatzsche.job  neatzsche.job.template  pbs_eye.sh.template  pbs_go.sh.template  plotbest.plt.template
experiments/: CMakeLists.txt
experiments/cppn/: CMakeLists.txt
experiments/cppn/include/: eval.h  image.h
experiments/cppn/src/: eval.cpp  image.c
experiments/dataset/: CMakeLists.txt
experiments/dataset/include/: eval.h
experiments/dataset/src/: eval.cpp  xorTest.cpp
experiments/eyeexperiment/: CMakeLists.txt  LightSimOSXViewer.xib  LightsimDelegate.h  LightsimDelegate.m
experiments/eyeexperiment/include/: .#eval.h  eval.h  lightsim-viewer.h  lightsim.h  lightsource.h  lsc.h  nworld.h  opaquecell.h  paintarea.h
experiments/eyeexperiment/src/: cell.cpp  eval.cpp  lightsim-viewer.cpp  lightsim.cpp  lightvector.cpp  lsc.cpp  nworld.cpp  opaquecell.cpp  paintarea.cpp  test-eye.cpp
experiments/goexperiment/: CMakeLists.txt
experiments/goexperiment/gnugo-3.6/: Makefile  config.h  config.status  config.vc  configure  configure.in
experiments/goexperiment/gnugo-3.6/doc/: Makefile  gnugo.info  gnugo.info-1  gnugo.info-2  gnugo.texi  install.texi
experiments/goexperiment/gnugo-3.6/engine/: Makefile
experiments/goexperiment/gnugo-3.6/engine/.deps/: aftermath.Po  board.Po  boardlib.Po  breakin.Po  cache.Po  clock.Po  combination.Po  dragon.Po  endgame.Po  filllib.Po  fuseki.Po  genmove.Po  globals.Po  handicap.Po  hash.Po  influence.Po  interface.Po  matchpat.Po  move_reasons.Po  movelist.Po  optics.Po  oracle.Po  owl.Po  persistent.Po  printutils.Po  readconnect.Po  reading.Po  score.Po  semeai.Po  sgfdecide.Po  sgffile.Po  shapes.Po  showbord.Po  surround.Po  unconditional.Po  utils.Po  value_moves.Po  worm.Po
experiments/goexperiment/gnugo-3.6/interface/: Makefile
experiments/goexperiment/gnugo-3.6/interface/.deps/: gmp.Po  gtp.Po  main.Po  play_ascii.Po  play_gmp.Po  play_gtp.Po  play_solo.Po  play_test.Po
experiments/goexperiment/gnugo-3.6/interface/debugboard/: Makefile
experiments/goexperiment/gnugo-3.6/patterns/: Makefile  aa_attackpat.c  apatterns.c  barriers.c  conn.c  dpatterns.c  endgame.c  eyes.c  fuseki13.c  fuseki19.c  fuseki9.c  fusekipat.c  handipat.c  hoshi_keima.db  hoshi_other.db  influence.c  josekidb.c  komoku.db  mokuhazushi.db  owl_attackpat.c  owl_defendpat.c  owl_vital_apat.c  patterns.c  read_attack.c  read_defend.c  sansan.db  takamoku.db
experiments/goexperiment/gnugo-3.6/patterns/.deps/: aa_attackpat.Po  apatterns.Po  barriers.Po  conn.Po  connections.Po  dfa.Po  dpatterns.Po  endgame.Po  eyes.Po  fuseki13.Po  fuseki19.Po  fuseki9.Po  fusekipat.Po  handipat.Po  helpers.Po  influence.Po  joseki.Po  josekidb.Po  mkeyes.Po  mkpat.Po  owl_attackpat.Po  owl_defendpat.Po  owl_vital_apat.Po  patterns.Po  read_attack.Po  read_defend.Po  transform.Po
experiments/goexperiment/gnugo-3.6/regression/: Makefile
experiments/goexperiment/gnugo-3.6/sgf/: Makefile
experiments/goexperiment/gnugo-3.6/sgf/.deps/: sgf_utils.Po  sgfgen.Po  sgfnode.Po  sgftree.Po
experiments/goexperiment/gnugo-3.6/utils/: Makefile
experiments/goexperiment/gnugo-3.6/utils/.deps/: getopt.Po  getopt1.Po  gg_utils.Po  random.Po
experiments/goexperiment/include/: eval.h  goexperiment.h  gowrapper.h
experiments/goexperiment/src/: eval.cpp  gowrapper.cpp  playgame.cpp  playtwoplayergame.cpp
experiments/helloworld/: CMakeLists.txt
experiments/helloworld/include/: eval.h
experiments/helloworld/src/: eval.cpp
experiments/hyperneat/: CMakeLists.txt
experiments/hyperneat/include/: dataseteval.h  eval.h
experiments/hyperneat/src/: dataseteval.cpp  eval.cpp
experiments/random/: CMakeLists.txt
experiments/random/include/: eval.h
experiments/random/src/: eval.cpp
ruby/: getnewestgenome.rb  observer.rb  plotdaemon.rb  plotter.rb  plottester.rb  run.rb
tags/cpp-0.5/: Makefile  plotbest.sh  run-easygo.sh
tags/cpp-0.6/: README  listresfiles.sh  plot.sh  profilexor.sh  timexor.sh
tags/cpp-0.7/: run-go.sh
trunk/cpp/: Makefile  distconfig2cpu.txt  listresfiles.sh  machinefile  plotbest.sh  run-go.sh
(+178 files in other folders)
